--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/GedalyaKrycer/hw-10-employee-summary#readme",
   "dependencies": {
     "inquirer": "^7.3.3",
-    "jest": "^26.2.2"
+    "jest": "^26.2.2",
+    "joi": "^17.1.1"
   }
 }
